@@ -269,7 +269,8 @@ GLADE_CB void
 on_normal_view1_activate               (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
-	hid_switch_normal_view();
+	if(GTK_CHECK_MENU_ITEM(menuitem)->active == TRUE) 
+		hid_switch_normal_view();
 }
 
 
@@ -277,7 +278,8 @@ GLADE_CB void
 on_large_view1_activate                (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
-	hid_switch_large_view();
+	if(GTK_CHECK_MENU_ITEM(menuitem)->active == TRUE) 
+		hid_switch_large_view();
 }
 
 
@@ -285,7 +287,8 @@ GLADE_CB void
 on_full_view1_activate                 (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
-	hid_switch_fullscreen();
+	if(GTK_CHECK_MENU_ITEM(menuitem)->active == TRUE) 
+		hid_switch_fullscreen();
 }
 
 
